Fix menu shifting on redirect (css inconsistent). -Removed padding:0, margin:0 from body, for consistency w/ DIY_mainpage. -Added negative margins to menu to ensure it's flush with page boundary.

--- a/DIY_BuildPage/Buildpage.css
+++ b/DIY_BuildPage/Buildpage.css
@@ -20,8 +20,6 @@
 
 
 body{
-    margin:0;
-    padding: 0;
     background: rgb(0,36,36);
 background: linear-gradient(90deg, rgba(0,36,36,1) 0%, rgba(56,228,238,1) 0%, rgba(0,155,255,1) 100%);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
