--- a/Menu/menu.css
+++ b/Menu/menu.css
@@ -15,7 +15,7 @@
     display:flex;
     justify-content:space-between;
     align-items:center;
-    margin:0px 0px;
+    margin:-8px -8px -8px -8px;
     background-color:white;
     padding:-10px 0px;
 }
